# SCloud

./: 172.22.27.170-key.pem  172.22.27.170.pem  Cargo.toml  README.md  user.json  users.json
assets/: index.html
files/dummy/: input_P3.ppm  input_P6.ppm
files/dummy/test_dir/: user_txt_lol.txt
src/: assets.rs  auth.rs  header.rs  identifier.rs  index.rs  lib.rs  main.rs  manip.rs  raw.rs  reader.rs  response_provider.rs  ressource.rs  utils.rs  writer.rs
templates/: index.html
