
[package]
name = "sylcpn_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sscanf = "0.4.1"
